# magnetic-one-langgraph

./: README.md  github_analyzer.py  magnetic-one-langgraph.ipynb  main.py  pyproject.toml  requirements.txt  test.py
magnetic_one_langgraph/: combine.py  combined.py  main.py  setup.py
magnetic_one_langgraph/agents/: base_agent.py  coder.py  file_surfer.py  final_review.py  orchestrator.py  terminal.py  web_surfer.py
magnetic_one_langgraph/config/: logging_config.py  settings.py
magnetic_one_langgraph/core/: graph.py  prompts.py  settings.py  state.py
magnetic_one_langgraph/magnetic_one_langgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
magnetic_one_langgraph/tests/: test_agents.py  test_utilities.py
magnetic_one_langgraph/utils/: __init__.py  metrics.py  validation.py
